Fix issue with header whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -398,10 +398,12 @@ main {
   }
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+@media only screen and (min-width: 75rem) {
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .page-wrapper {
