--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -14,9 +14,11 @@ main {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @media only screen and (min-width: $desktop) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .page-wrapper {
